--- a/style.css
+++ b/style.css
@@ -65,44 +65,58 @@ img {
     background-color: #3882f6;
 }
 
-
-/* .main-one {
-    
-    padding: 0 40px;
-
-    display: flex;
-    justify-content: space-between;
-    border: solid blue 4px;
-}
-
-
-.hero {
-    border: solid red 4px;
-}
-
-.imgOne {
-    border: solid green 4px;
-} */
-
-
-
 /* Section  Two */
-/*
+
 .main-two {
-    border: solid red 4px;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 40px;
 }
+
 
 .title-two {
-    border: solid blue 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
 }
 
 .container {
-    border: solid green 4px;
+    display: flex;
+    justify-content: center;
+    gap: 52px;
 }
+
+.box {
+    height: 100px;
+    width: 100px;
+    border-radius: 10%;
+    border: solid blue 4px;
+}
+
+.info {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    align-self: center;
+}
+
 
 .main-three {
     border: solid red 4px;
 }
+
+/*
+
+
+
 
 .text {
     border: solid blue 4px;
