--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-* {
+/* * {
     outline: 2px solid red;
-}
+} */
 
 body {
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     margin: 0;
 }
 
@@ -39,14 +39,15 @@ header {
     background-color: #1f2937;
 }
 
-.main-section {
-    padding-left: 5%;
+.test {
+    width: 500px;
 }
 
 .main-text {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: extra-bold;
+
 }
 
 .main-subtext {
@@ -63,8 +64,43 @@ header {
 }
 
 img {
+    max-width: 600px;
 
-    max-width: 100%;
 }
 
 /* Quote section */
+
+.main-two {
+    background-color: #F9FAF8;
+}
+
+.title-two {
+    padding-top: 10px;
+    text-align: center;
+    font-size: 36px;
+    font-weight: extra-bold;
+    color: #1f2937
+}
+
+.container {
+    padding: 40px 140px 150px 200px;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.info {
+    width: 150px;
+    height: 120px;
+
+}
+
+.box {
+    width: 140px;
+    height: 130px;
+    border: 4px solid #3882f6;
+    border-radius: 10%;
+
+}
